data/derived/comb/progs/unify/prog4452.ml.out
Characters 77-112:
  if n > 0 then digitsOfIntHelper (n/10) (n mod 10) :: result
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
